<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_tint" />

    <ImageView
        android:id="@+id/moreIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_more"
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:layout_marginTop="@dimen/dp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...
                    android:layout_marginTop="-9dp"
                    android:layout_marginEnd="-9dp"
                    app:layout_constraintEnd_toEndOf="@id/icon"
                    app:layout_constraintTop_toBottomOf="@id/icon" />

                <TextView
                    android:id="@+id/name"
                    style="@style/Heading1Text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:gravity="center"
...
                <TextView
                    android:id="@+id/passwordSectionTitle"
                    style="@style/Section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/resource_details_password_header"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <!-- PASSWORD -->
                <LinearLayout
                    android:id="@+id/passwordContainer"
                    android:layout_width="match_parent"
...
                    android:paddingHorizontal="@dimen/dp_24"
                    android:paddingVertical="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    app:layout_constraintTop_toBottomOf="@id/passwordSectionTitle">

                    <com.passbolt.mobile.android.core.ui.itemwithheaderandaction.ItemWithHeaderAndActionView
                        android:id="@+id/usernameItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:itemWithHeaderAndActionView_action="COPY"
                        app:itemWithHeaderAndActionView_title="@string/resource_details_username_header" />

                    <com.passbolt.mobile.android.core.ui.itemwithheaderandaction.ItemWithHeaderAndActionView
                        android:id="@+id/passwordItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        app:itemWithHeaderAndActionView_action="NONE"
                        app:itemWithHeaderAndActionView_differentiateCharacterGroups="true"
                        app:itemWithHeaderAndActionView_isValueSecret="true"
                        app:itemWithHeaderAndActionView_title="@string/resource_details_password_header" />

                    <com.passbolt.mobile.android.core.ui.itemwithheaderandaction.ItemWithHeaderAndActionView
                        android:id="@+id/urlItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        app:itemWithHeaderAndActionView_action="COPY"
                        app:itemWithHeaderAndActionView_shouldUseWebLink="true"
                        app:itemWithHeaderAndActionView_title="@string/resource_details_url_header" />

                </LinearLayout>

                <!-- TOTP -->
                <TextView
                    android:id="@+id/totpSectionTitle"
...
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dp_24"
                    android:paddingBottom="@dimen/dp_16"
                    app:layout_constraintTop_toBottomOf="@id/metadataSectionTitle">

                    <com.passbolt.mobile.android.core.ui.itemwithheaderandaction.ItemWithHeaderAndActionView
                        android:id="@+id/metadataDescriptionItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        app:itemWithHeaderAndActionView_action="NONE"
                        app:itemWithHeaderAndActionView_isValueSecret="true"
                        app:itemWithHeaderAndActionView_title="@string/resource_details_description_header"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/locationHeader"
                        style="@style/Heading"
                        android:layout_width="match_parent"
...
