...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dp_24"
    tools:ignore="missingConstraints">

    <TextView
        android:id="@+id/title"
        style="@style/Heading2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
...
