...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@id/actionIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="airbnb.com/login" />

    <ImageView
        android:id="@+id/actionIcon"
...
