...
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="@android:color/transparent"
                app:startIconTintMode="screen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp_search"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
...
